# Allocators

./: CMakeLists.txt  README.md  main.cpp  memory.h  typename_holder.h
alloc_buddies/: budy_system.h
alloc_list/: list_memory.cpp  list_memory.h
alloc_new_delete/: alloc_global_heap.cpp  alloc_global_heap.h
logger/: logger.cpp  logger.h  logger_builder.cpp  logger_builder.h  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  logger_holder.cpp  logger_holder.h
